--- a/jung_z5_4_kod.html
+++ b/jung_z5_4_kod.html
@@ -6,7 +6,7 @@
 <textarea>
 <html>
 <head>
-<title>styl zewnetrzne</title>
+<title>styl zewnetrzny</title>
 <meta http-equiv="Content-Type" content="text/html; charset="utf-8">
 <!-- liniowy -->
 </head>
