--- a/index.html
+++ b/index.html
@@ -1,26 +1,38 @@
 <html>
 <head>
-<META HTTP-EQUIV="content-type" CONTENT="text/html"; "CHARSET=iso-8859-2">
+<META HTTP-EQUIV="content-type" CONTENT="text/html"; "CHARSET="utf-8">
 <meta charset="utf-8">
 </head>
 <body bgcolor=#FFFFCC>
 <table width=95% border="1" align="center">
  <tr>
- <td width=18% align="center" valign="top">
- <marquee valign="top" align="center" bgcolor="blue" > Karol Jung</marquee>
+ <td width=18% align="center" >
+ <marquee align="center" bgcolor="blue" > Karol Jung</marquee>
  <br>
  <a href="jung_z5_1.html" target="strony">zadanie 5 - importowany</a><br>
  <a href="jung_z5_2.html" target="strony">zadanie 5 - zewnetrzny</a><br>
  <a href="jung_z5_3.html" target="strony">zadanie 5 - wewnetrzny</a><br>
  <a href="jung_z5_4.html" target="strony">zadanie 5 - liniowy</a><br>
+ <a href="jung_z6.html" target="strony">zadanie 6</a><br>
+ <a href="jung_z7.html" target="strony">zadanie 7</a><br>
+ <a href="jung_z8.html" target="strony">zadanie 8</a><br>
+ <a href="jung_z9.html" target="strony">zadanie 9</a><br>
+ <a href="jung_z10.html" target="strony">zadanie 10</a><br>
+ <a href="jung_z11.html" target="strony">zadanie 11</a><br>
+  <a href="jung_z12.html" target="strony">zadanie 12</a><br>
+   <a href="jung_z13.html" target="strony">zadanie 13</a><br>
  </td>
- <td align="center"><iframe width=650 height=650 name="strony" src="" border="0"></iframe>
+ <td width=650 height=700 align="center"><iframe width=650 height=700 name="strony" src="" border="0"></iframe>
  </td>
  <td width=18% align="center">
  <a href="jung_z5_1_kod.html" target="strony">zadanie 5 - kod - importowany</a><br>
  <a href="jung_z5_2_kod.html" target="strony">zadanie 5 - kod - zewnetrzny</a><br>
  <a href="jung_z5_3_kod.html" target="strony">zadanie 5 - kod - wewnetrzny</a><br>
  <a href="jung_z5_4_kod.html" target="strony">zadanie 5 - kod - liniowy</a><br>
+ <a href="jung_z6_kod.html" target="strony">zadanie 6 - kod</a><br>
+ <a href="jung_z7_kod.html" target="strony">zadanie 7 - kod</a><br>
+ <a href="jung_z8_kod.html" target="strony">zadanie 8 - kod</a><br>
+ <a href="jung_z13_kod.html" target="strony">zadanie 13 - kod</a><br>
  </td>
  </tr>
 </table>
