--- a/jung_z5_3_kod.html
+++ b/jung_z5_3_kod.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 </head>
 <body bgcolor=#FFFFCC>
-<textarea>
+<textarea rows=27 cols=84>
 <html>
 <head>
 <title>styl zewnetrzne</title>
