--- a/jung_z5_4_kod.html
+++ b/jung_z5_4_kod.html
@@ -3,10 +3,10 @@
 <meta charset="utf-8">
 </head>
 <body bgcolor=#FFFFCC>
-<textarea>
+<textarea rows=27 cols=84>
 <html>
 <head>
-<title>styl zewnetrzny</title>
+<title>styl zewnetrzne</title>
 <meta http-equiv="Content-Type" content="text/html; charset="utf-8">
 <!-- liniowy -->
 </head>
